Use Avro as file-format and store files in GCS.