@@ -2,11 +2,9 @@ package no.ssb.rawdata.gcs;
 
 import no.ssb.rawdata.api.RawdataClient;
 import no.ssb.rawdata.api.RawdataClientInitializer;
-import no.ssb.service.provider.api.ProviderConfigurator;
 import no.ssb.service.provider.api.ProviderName;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 import java.util.Set;
 
@@ -21,28 +19,21 @@ public class GCSRawdataClientInitializer implements RawdataClientInitializer {
     @Override
     public Set<String> configurationKeys() {
         return Set.of(
-                "gcs.bucket.url",
-                "gcs.bucket.folder",
+                "bucket",
+                "local-temp-folder",
                 "staging.retention.max.days",
                 "staging.retention.max.hours",
                 "staging.retention.max.minutes",
                 "staging.retention.buffer.days",
                 "staging.retention.buffer.hours",
-                "staging.retention.buffer.minutes",
-                "lmdb.folder",
-                "lmdb.map-size",
-                "lmdb.message.file.max-size",
-                "lmdb.topic.write-concurrency",
-                "lmdb.topic.read-concurrency"
+                "staging.retention.buffer.minutes"
         );
     }
 
     @Override
     public RawdataClient initialize(Map<String, String> configuration) {
-        Path localLmdbTopicFolder = Paths.get(configuration.get("lmdb.folder"));
-        String bucket = configuration.get("gcs.bucket.url");
-        String gcsFolder = configuration.get("gcs.bucket.folder");
-        RawdataClient stagingClient = ProviderConfigurator.configure(configuration, "lmdb", RawdataClientInitializer.class);
-        return new GCSRawdataClient(stagingClient, localLmdbTopicFolder, bucket, gcsFolder);
+        String bucket = configuration.get("bucket");
+        Path localTempFolder = Path.of(configuration.get("local-temp-folder"));
+        return new GCSRawdataClient(bucket, localTempFolder);
     }
 }
